--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.10.0",
     "mariadb": "^2.5.3",
     "swagger-jsdoc": "^6.0.8",
     "swagger-ui-express": "^4.1.6"
